# storedemo_testdino_automation

./: .env.example  README.md  pyproject.toml
pages/: base_page.py
